configure role swagger
